--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,63 +15,111 @@ a {
   a:hover {
     text-decoration: underline; }
 
+.fa-logo {
+  float: left;
+  margin: 20px 30px;
+}
+
+.heroku {
+  background-color: #7056bf;
+}
+
+.heroku:hover {
+  background-color: #5b4bad;
+}
+
+.salesforce {
+  background-color: #0f9bd7;
+}
+
+.salesforce:hover {
+  background-color: #138db7;
+}
+
 .btn {
   display: inline-block;
-  margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
-    margin-left: 1rem; }
+  width: 224px;
+  height: 48px;
+  margin: 10px auto;
+  border-radius: 8px;
+  
+}
 
-.btn:hover {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
-
-@media screen and (min-width: 64em) {
-  .btn {
-    padding: 0.75rem 1rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .btn {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
-
-@media screen and (max-width: 42em) {
-  .btn {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem; }
-    .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } }
+.btn + .btn {
+  margin-left: 1rem;
+}
 
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #f05841;
+  background-image: linear-gradient(120deg, #39414D, #f05841); }
+
+.menu {
+  list-style-type: none;
+  margin: 4rem 0 0;
+  padding: 0;
+}
+
+.menu li {
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+.menu li + li {
+  margin-left: 2rem;
+}
+
+.menu li a {
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 1.1rem;
+  padding-bottom: 10px;
+}
+
+.menu li a, .menu li a:hover, .menu li a:active, .menu li a:visited {
+  text-decoration: none;
+}
+
+.menu li a.current, .menu li a:hover {
+  border-bottom: 3px white solid;
+}
+
+table.architecture-items tr td {
+  border: none;
+  vertical-align: top;
+}
+
+table.architecture-items tr td:nth-child(1) {
+  border-right: 1px solid #eaeaea;
+}
+
+table.architecture-items tr {
+  background-color: #fcfcfc;
+}
+
+table.architecture-items tr:nth-child(odd) {
+  background-color: #f8f8f8;
+}
+
+section.main-content li + li {
+  margin-top: 6px;
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 5rem 6rem 11px; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
-    padding: 3rem 4rem; } }
+    padding: 3rem 4rem 11px; } }
 
 @media screen and (max-width: 42em) {
   .page-header {
-    padding: 2rem 1rem; } }
+    padding: 2rem 1rem 11px; } }
 
 .project-name {
+  clear: both;
   margin-top: 0;
   margin-bottom: 0.1rem; }
 
@@ -112,7 +160,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #f05841; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -227,19 +275,8 @@ a {
 
 .site-footer-owner {
   display: block;
-  font-weight: bold; }
+  font-size: 0.9rem;
+  text-align: center; }
 
 .site-footer-credits {
   color: #819198; }
-
-@media screen and (min-width: 64em) {
-  .site-footer {
-    font-size: 1rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .site-footer {
-    font-size: 1rem; } }
-
-@media screen and (max-width: 42em) {
-  .site-footer {
-    font-size: 0.9rem; } }
